fix aligning issue with loader on add quote page

--- a/client/vite-project/src/components/add-quote/AddQuote.module.scss
+++ b/client/vite-project/src/components/add-quote/AddQuote.module.scss
@@ -110,9 +110,7 @@
 .add__form__loader__container {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
-    width: 100%;
     justify-self: center;
-    align-self: center;
 }
 
 .add__form__toaster__container {
